Fixed issues where fig captions were not wrapping and paragraphs were being broken up

--- a/style.css
+++ b/style.css
@@ -2,20 +2,17 @@ img {
     max-height: 425px;
 }
 
-/* @media only screen and (max-width: 600px) {
-    figure {
-        margin: 0;
-    }
-} */
-
 figure {
     max-width: 300px;
-}
 
-figcaption {
-    max-width: 100%;
 }
 
 li {
     list-style: circle;
+}
+
+@media only screen and (max-width: 600px) {
+    figure {
+        max-width: 175px;
+    }
 }
